@@ -18,7 +18,9 @@ setlocal
 call "%~dp0zkEnv.cmd"
 
 set ZOOMAIN=org.apache.zookeeper.server.quorum.QuorumPeerMain
+set ZOO_LOG_FILE=zookeeper-%USERNAME%-server-%COMPUTERNAME%.log
+
 echo on
-call %JAVA% "-Dzookeeper.log.dir=%ZOO_LOG_DIR%" "-Dzookeeper.root.logger=%ZOO_LOG4J_PROP%" -cp "%CLASSPATH%" %ZOOMAIN% "%ZOOCFG%" %*
+call %JAVA% "-Dzookeeper.log.dir=%ZOO_LOG_DIR%" "-Dzookeeper.root.logger=%ZOO_LOG4J_PROP%" "-Dzookeeper.log.file=%ZOO_LOG_FILE%" -cp "%CLASSPATH%" %ZOOMAIN% "%ZOOCFG%" %*
 
 endlocal
