@@ -27,7 +27,7 @@ zookeeper.log.threshold=INFO
 zookeeper.log.maxfilesize=256MB
 zookeeper.log.maxbackupindex=20
 
-zookeeper.tracelog.dir=.
+zookeeper.tracelog.dir=${zookeeper.log.dir}
 zookeeper.tracelog.file=zookeeper_trace.log
 
 log4j.rootLogger=${zookeeper.root.logger}
